force-app/main/default/objects/Account_Update_Request__c/Account_Update_Request__c.object-meta.xml
<CustomObject>
    <description>object used to contain change requests made to the covetrus accounts</description>
    <label>Account Update Request</label>
    <nameField>
        <displayFormat>AUR-{000000}</displayFormat>
        <label>Account Update Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Update Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>