force-app/main/default/objects/Account_Update_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup relationship to the Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Update Requests</relationshipLabel>
    <relationshipName>Account_Update_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>