force-app/main/default/objects/Account_Update_Request__c/fields/Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Status__c</fullName>
    <label>Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Sent_back_to_Requester</fullName>
                <label>Sent back to Requester</label>
            </value>
            <value>
                <fullName>Disapproved</fullName>
                <isActive>false</isActive>
                <label>Disapproved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>