force-app/main/default/objects/Account_Update_Request__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment provided by the submitter of the AUR</description>
    <label>Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>