force-app/main/default/objects/Account_Update_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Field to hold any comments that need to be sent along with the request to the approver.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>