force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Account_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Account Disabled</label>
    <type>Checkbox</type>
</CustomField>