force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Name__c</fullName>
    <description>Account name prior value passed to the update request</description>
    <label>Existing Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>