force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Parent__c</fullName>
    <description>prior value of the account&#39;s parent account id</description>
    <label>Existing Account Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>