force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Status__c</fullName>
    <label>Existing Account Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>