force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Existing_Shipping_City__c</fullName>
    <label>Existing Shipping City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>