force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Existing_Shipping_Country__c</fullName>
    <label>Existing Shipping Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>