force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Existing_Shipping_Postal_Code__c</fullName>
    <label>Existing Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>