force-app/main/default/objects/Account_Update_Request__c/fields/Existing_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Existing_Shipping_State__c</fullName>
    <label>Existing Shipping State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>