force-app/main/default/objects/Account_Update_Request__c/fields/New_Account_Disabled__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Account Disabled</label>
    <type>Checkbox</type>
</CustomField>