force-app/main/default/objects/Account_Update_Request__c/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <description>Purposed new account Name</description>
    <label>New Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>