force-app/main/default/objects/Account_Update_Request__c/fields/New_Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Parent__c</fullName>
    <description>Updated value in the account parent field</description>
    <label>New Account Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>