force-app/main/default/objects/Account_Update_Request__c/fields/New_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Status__c</fullName>
    <label>New Account Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>