force-app/main/default/objects/Account_Update_Request__c/fields/New_Corporate_Group_Parent__c.field-meta.xml
<CustomField>
    <fullName>New_Corporate_Group_Parent__c</fullName>
    <label>New Corporate Group Parent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>