force-app/main/default/objects/Account_Update_Request__c/fields/New_Covetrus_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Covetrus_Customer_Number__c</fullName>
    <label>New Covetrus Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>