force-app/main/default/objects/Account_Update_Request__c/fields/New_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_Country__c</fullName>
    <label>New Shipping Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>