force-app/main/default/objects/Account_Update_Request__c/fields/New_Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_State_Province__c</fullName>
    <label>New Shipping State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>