force-app/main/default/objects/Account_Update_Request__c/fields/Update_Approved__c.field-meta.xml
<CustomField>
    <fullName>Update_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that controls a process builder which will initiate the update to account when the Update Request is approved.</description>
    <label>Update Approved</label>
    <type>Checkbox</type>
</CustomField>