force-app/main/default/objects/Account_Update_Request__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>looks up to the related work item that began the account creation process</description>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Account Update Requests</relationshipLabel>
    <relationshipName>Account_Update_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>