force-app/main/default/objects/Account_Update_Request__c/listViews/Account_Update_Requests_Account_Update_Request.listView-meta.xml
<ListView>
    <fullName>Account_Update_Requests_Account_Update_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Update Requests</label>
    <queue>Account_Update_Requests</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>