force-app/main/default/objects/Account_Update_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Change_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>