force-app/main/default/objects/Account_Update_Request__c/listViews/AUR_s_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>AUR_s_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Account Update Requests Pending Approval</label>
</ListView>