force-app/main/default/objects/Account_Update_Request__c/listViews/My_Account_Update_Requests.listView-meta.xml
<ListView>
    <fullName>My_Account_Update_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Change_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Update Requests</label>
</ListView>